--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:ital,wght@0,300;1,300;1,400&display=swap" rel="stylesheet">
-    <title>League of Legends Champions Info</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:ital,wght@0,300;0,700;1,300;1,400&display=swap" rel="stylesheet">    <title>League of Legends Champions Info</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
